# overlap_localization

./: .gitignore  LICENSE  README.md  requirements.txt
config/: evaluation.yml  localization.yml  prepare_training.yml
data/: README.md
src/: FeatureVolumeCacheSequence.py  README.md  fast_infer.py  gen_feature_volumes.py  initialization.py  main_overlap_mcl.py  main_prepare_data.py  motion_model.py  resample.py  sensor_model_overlap.py  vis_loc_result.py  visualizer.py
src/prepare_training/: README.md  add_seq_label.py  com_overlap_grid.py  convert_training_data.py  convert_training_labels.py  gen_depth_and_normal_map.py  gen_depth_and_normal_query.py  gen_virtual_scan.py  normalize_data.py  split_train_val.py
src/prepare_training/c_utils/: CMakeLists.txt
